<resources>
    <string name="app_name">Chat Chat</string>

    <!-- TODO:Strings related to login -->
    <string name="user_name">User name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="remember_password">Remember</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- TODO:Strings related to register -->
    <string name="your_password">Must more than 6 characters </string>
    <string name="retype_password">Retype password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_user_valid">The username or password you entered is incorrect</string>
    <string name="error_already_email">This email is already to use</string>
    <string name="error_invalid_userName">This user name is already to use</string>
    <string name="error_invalid_user">This user name is already to use</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_password">This field is required</string>
    <string name="error_re_password">This password do not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- TODO:Strings related to exit app -->
    <string name="title_exit">Exit application ? </string>
    <string name="message_exit">\n Sure to exit Chat Chat application ? </string>
    <string name="Yes_exit">Exit</string>
    <string name="No_exit">Cancel</string>

    <!-- TODO:Strings related to Forgot password - enter email -->
    <string name="title_enter_email">Enter E-mail</string>
    <string name="title_1.3">Step 1 of 3</string>
    <string name="title_forgot">Forgot your password</string>
    <string name="message_forgot">Enter your registered e-mail address to send a password reset e-mail to it.</string>
    <string name="button_OK">OK</string>
    <string name="hint_enter_email">Enter your E-mail</string>
    <!-- Strings related to Forgot password - check email -->
    <string name="title_check_email">Check E-mail</string>
    <string name="title_2.3">Step 2 of 3</string>
    <string name="title_check">Check generate number</string>
    <string name="message_check">Enter the generate number from your e-mail in 3 minutes.</string>
    <string name="hint_check_email">Enter your generate number</string>
    <!-- Strings related to Forgot password - reset password -->
    <string name="title_reset_password">Reset password</string>
    <string name="title_3.3">Step 3 of 3</string>
    <string name="title_reset">Enter new password</string>
    <string name="message_reset">Enter new password to use for login to your account.</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>

    <!-- TODO: String related to main activity -->
    <string name="friend_tab">Friend</string>
    <string name="group_tab">Group</string>
    <string name="setting_tab">Setting</string>
    <!-- String related to menu -->
    <string name="add_friends">Add friends</string>
    <string name="filter_friend">Filter friend</string>
    <string name="create_group">Create group</string>
    <string name="filter_group">Filter group</string>
    <string name="block_list">Block list</string>
    <string name="sort">Sort</string>
    <string name="manage_category">Manage category</string>

    <!-- TODO: String related to addFriend activity -->
    <string name="action_successful">Add friend\nsuccessful</string>
    <string name="action_add">Add</string>
    <string name="action_wrong">Add friend fail</string>

    <!-- TODO:Strings related to accept friend request -->
    <string name="title_accect">Accept this friend request ? </string>
    <string name="message_accept">\n Sure to accept friend request ? </string>
    <string name="Yes_accept">Accept</string>
    <string name="No_decline">Decline</string>
    <string name="Neutral_close">Close</string>
    <string name="text_accept_success">Accepted friend!</string>
    <string name="text_decline_success">Declined friend!</string>

    <!-- TODO: String related to create group -->
    <string name="message_warning">*You can only invite up to 200 people per group chat ,Friend did you add here will be sent an invitation to the group.</string>
    <string name="button_save">Save</string>
    <string name="title_create_group">Create Group</string>
    <string name="text_owner_group">You are owner of this group.</string>
    <string name="hint_group_password">Group password</string>
    <string name="hint_group_name">Group name</string>
    <string name="text_add">Add</string>
    <string name="text_invite">Invite</string>
    <string name="can_not_invite">Can not create group\nPlease invite 1 friend at least</string>
    <string name="text_set_password">Set group password</string>
    <string name="text_change_password">Change group password</string>
    <string name="text_search_hint">search by displayname</string>
    <string name="button_invite">Invite (0)</string>
    <string name="text_member">Member</string>

    <!-- TODO: String related to Profile account -->
    <string name="title_profile">Profile</string>
    <string name="title_account">Account</string>
    <string name="title_dislayname">Display name</string>
    <string name="title_username">Username</string>
    <string name="title_email">Email</string>
    <string name="title_delete_account">Delete account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_displayname_minimum">DisplayName must have more than 3 characters\nand not have space only</string>
    <string name="text_sure_to_delete_account">If you delete your Chat Chat account you will not be able to login with it anymore. Are you sure you want to continue ?</string>
    <string name="but_cancel">Cancel</string>
    <string name="but_next">Next</string>
    <!-- Delete -->
    <string name="text_delete_account">     Please keep in mind that delete your Chat Chat account is permanant and will delete all of your Chat history Friend listGroup chat listProfileSetting and you can not login to this account forever.</string>
    <string name="button_delete_my_account">Delete my account</string>
    <string name="button_delete_successful">Delete successful</string>
    <string name="button_delete_fail">Delete failed</string>
    <string name="checkbox_yes">Yes,I want to delete my account.</string>
    <string name="checkbox_before">Must check I want to delete before.</string>

    <!-- TODO: Strings related to Settings -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_title_vibration">Vibration</string>
    <string name="pref_title_music">Music</string>
    <string name="pref_privacy_title">Privacy</string>
    <string name="pref_title_passcode">Passcode lock</string>
    <string name="pref_title_change_passcode">Change passcode</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_title_theme">Select theme</string>
    <string name="default_theme">Green</string>
    <!-- Passcode -->
    <string name="enter_passcode">Enter passcode</string>
    <string name="enter_old_passcode">Enter old passcode</string>
    <string name="enter_old_passcode_below">Enter passcode below</string>
    <string name="set_passcode">Set passcode</string>
    <string name="enter_new_passcode">Enter new passcode below</string>
    <string name="enter_passcode_below">Enter passcode below</string>
    <string name="confirm_passcode">Confirm passcode</string>
    <string name="again_passcode">Enter the passcode again</string>
    <string name="wrong_passcode">Wrong passcode\ntry again</string>
    <string name="not_match_passcode">Not match passcode\ntry again</string>

    <!-- TODO: Strings related to Friend -->
    <string name="title_no_friends">You do not have any friend</string>
    <string name="text_button_add_friend">Add friend NOW!!</string>

    <!-- TODO: Strings related to Group -->
    <string name="title_no_groups">You do not have any group</string>

    <!-- TODO: Strings related to Other -->
    <string name="title_profile_account">Profile\nAccount</string>
    <string name="title_Setting">Setting</string>

    <!-- TODO:Strings related to join group request -->
    <string name="title_join">Join this group ? </string>
    <string name="message_join">\n Sure to join this group ? </string>
    <string name="Yes_join">Join</string>
    <string name="No_ignore">Ignore</string>
    <string name="text_join_success">Joined group!</string>
    <string name="text_ignore_success">Ignore group!</string>
    <string name="title_group_password">Enter group password</string>
    <string name="text_wrong_password">Wrong password</string>
    <string name="button_cancel">Cancel</string>

    <!-- TODO: Strings related to Group detail -->
    <string name="title_group_detail">Group detail</string>
    <string name="button_kick_meber">Kick members</string>
    <string name="button_kick">Kick</string>
    <string name="toast_group_member_null">Not have invitation\nPlease add one friend at less</string>
    <string name="toast_group_password_null">Not have group password\nPlease set group password</string>
    <string name="toast_group_name_null">Not have group name\nPlease type group name</string>
    <string name="toast_group_name_more">Group name must have more than 4 characters</string>
    <string name="toast_group_password_more">Group password must have more than 6 characters</string>
    <string name="can_not_kick">Can not kick\nPlease kick 1 member at least</string>
    <string name="button_close">Close</string>
    <string name="text_change_success">Change successful</string>
    <string name="text_change_fail">Change failed</string>

    <!-- TODO: Strings related to Group chatroom -->
    <string name="menu_group_detail">Group detail</string>
    <string name="menu_invite_to_group">Invite</string>
    <string name="menu_leave_group">Leave</string>
    <string name="hint_enter_message">Enter message here</string>

    <!-- TODO: Strings related to Private chatroom -->
    <string name="menu_block">Block</string>

</resources>
