<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_friend"
        android:title="@string/add_friends"
        android:orderInCategory="100"
        android:icon="@drawable/add_friend"
        app:showAsAction="always" />
    <item android:id="@+id/action_filter_friend"
        android:title="@string/filter_friend"
        android:orderInCategory="101"
        android:icon="@drawable/filter"
        app:showAsAction="always" />
    <item android:id="@+id/action_block"
        android:title="@string/block_list"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort"
        android:title="@string/sort"
        android:orderInCategory="103"
        app:showAsAction="never" />
</menu>