<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp"
    tools:context="com.example.chatchatapplication.Activity.Confirm_delete_account">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title_delete_account"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/delete_account"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_delete_account"/>

    <CheckBox
        android:id="@+id/chk_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_yes"/>

    <com.dd.CircularProgressButton
        android:id="@+id/delete_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white_text"
        android:textStyle="bold"
        android:textSize="18sp"
        app:cpb_cornerRadius="5dp"
        app:cpb_textComplete="@string/button_delete_successful"
        app:cpb_textError="@string/button_delete_fail"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        app:cpb_selectorIdle="@drawable/error_state_selector"
        app:cpb_textIdle="@string/button_delete_my_account"/>

</LinearLayout>
