<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context="com.example.chatchatapplication.Activity.FP_CheckEmail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_check_email"
            android:textColor="@color/dark_text"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_2.3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_check_email"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:maxLines="1"
            android:maxLength="6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_check"
                android:textColor="@color/cpb_green_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/message_check"
                android:textColor="@color/dark_text"
                android:textSize="18sp" />
        </LinearLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/ok_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white_text"
            android:textStyle="bold"
            app:cpb_cornerRadius="5dp"
            app:cpb_iconComplete="@drawable/ic_action_accept"
            app:cpb_iconError="@drawable/ic_action_cancel"
            app:cpb_selectorComplete="@drawable/complete_state_selector"
            app:cpb_selectorError="@drawable/error_state_selector"
            app:cpb_selectorIdle="@drawable/idle_state_selector_g"
            app:cpb_textIdle="@string/button_OK" />

    </LinearLayout>

</LinearLayout>
